# simple_drone_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py
rviz/: x3.rviz
urdf/: x3.urdf
